--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.3.4
 Django==3.2.3
 django-crispy-forms==1.12.0
-Pillow==8.2.0
+pillow==10.4.0
 pytz==2021.1
+setuptools==70.2.0
 sqlparse==0.4.1
